--- a/index.html
+++ b/index.html
@@ -12,12 +12,93 @@
       body {
         font-family: 'Inter', sans-serif;
         background-color: #f0f4f8;
+      }
+
+      #background-animation {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
         background-image: 
           radial-gradient(circle at 15% 15%, #e0f2fe 0%, transparent 40%),
           radial-gradient(circle at 85% 25%, #dcfce7 0%, transparent 40%),
           radial-gradient(circle at 25% 85%, #f3e8ff 0%, transparent 40%),
           radial-gradient(circle at 85% 85%, #ffedd5 0%, transparent 40%);
+        overflow: hidden;
       }
+
+      .shape {
+        position: absolute;
+        border-radius: 50%;
+        animation: expand 20s infinite ease-out;
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      @keyframes expand {
+        0% {
+          transform: scale(0);
+          opacity: 0;
+        }
+        50% {
+          opacity: 0.5;
+        }
+        100% {
+          transform: scale(2.5);
+          opacity: 0;
+        }
+      }
+
+      .shape:nth-child(1) {
+        width: 40vw;
+        height: 40vw;
+        min-width: 400px;
+        min-height: 400px;
+        background-color: rgba(224, 242, 254, 0.6); /* light blue */
+        top: -20%;
+        left: -20%;
+        animation-delay: 0s;
+        animation-duration: 22s;
+      }
+
+      .shape:nth-child(2) {
+        width: 50vw;
+        height: 50vw;
+        min-width: 500px;
+        min-height: 500px;
+        background-color: rgba(220, 252, 231, 0.6); /* light green */
+        bottom: -25%;
+        right: -25%;
+        animation-delay: 5s;
+        animation-duration: 25s;
+      }
+
+      .shape:nth-child(3) {
+        width: 35vw;
+        height: 35vw;
+        min-width: 300px;
+        min-height: 300px;
+        background-color: rgba(243, 232, 255, 0.6); /* light purple */
+        bottom: 5%;
+        left: 10%;
+        animation-delay: 10s;
+        animation-duration: 20s;
+      }
+
+      .shape:nth-child(4) {
+        width: 30vw;
+        height: 30vw;
+        min-width: 250px;
+        min-height: 250px;
+        background-color: rgba(255, 237, 213, 0.6); /* light orange */
+        top: 10%;
+        right: 5%;
+        animation-delay: 15s;
+        animation-duration: 18s;
+      }
+
     </style>
   <script type="importmap">
 {
@@ -32,6 +113,12 @@
 </script>
 </head>
   <body>
+    <div id="background-animation">
+      <div class="shape"></div>
+      <div class="shape"></div>
+      <div class="shape"></div>
+      <div class="shape"></div>
+    </div>
     <div id="root"></div>
     <script type="module" src="/index.tsx"></script>
   </body>
