--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Collaborative Form System</title>
+    <title>My New Application</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,7 +14,7 @@
         background-color: #f0f4f8;
       }
 
-      #background-animation {
+      #background-overlay {
         position: fixed;
         top: 0;
         left: 0;
@@ -23,128 +22,64 @@
         height: 100%;
         z-index: -1;
         background-image: 
-          radial-gradient(circle at 15% 15%, #e0f2fe 0%, transparent 40%),
-          radial-gradient(circle at 85% 25%, #dcfce7 0%, transparent 40%),
-          radial-gradient(circle at 25% 85%, #f3e8ff 0%, transparent 40%),
-          radial-gradient(circle at 85% 85%, #ffedd5 0%, transparent 40%);
-        overflow: hidden;
+          radial-gradient(circle at 15% 15%, #e0f2fe 0%, transparent 35%),
+          radial-gradient(circle at 85% 25%, #dcfce7 0%, transparent 35%),
+          radial-gradient(circle at 25% 85%, #f3e8ff 0%, transparent 35%),
+          radial-gradient(circle at 85% 85%, #ffedd5 0%, transparent 35%);
+        opacity: 0.6;
       }
 
-      .shape {
-        position: absolute;
-        border-radius: 50%;
-        animation: expand 20s infinite ease-out;
-        opacity: 0;
-        pointer-events: none;
+      /* From LoginScreen.tsx */
+      @keyframes shake {
+        10%, 90% { transform: translate3d(-1px, 0, 0); }
+        20%, 80% { transform: translate3d(2px, 0, 0); }
+        30%, 50%, 70% { transform: translate3d(-4px, 0, 0); }
+        40%, 60% { transform: translate3d(4px, 0, 0); }
+      }
+      .animate-shake {
+        animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+      }
+      @keyframes illuminate {
+        0%, 100% { background-color: #10b981; } /* emerald-600 */
+        33% { background-color: #3b82f6; } /* blue-500 */
+        66% { background-color: #f97316; } /* orange-500 */
+      }
+      .animate-illuminate {
+        animation: illuminate 15s infinite ease-in-out;
       }
 
-      @keyframes expand {
-        0% {
-          transform: scale(0);
-          opacity: 0;
-        }
-        50% {
-          opacity: 0.5;
-        }
-        100% {
-          transform: scale(2.5);
-          opacity: 0;
-        }
+      /* From NotificationToast.tsx */
+      @keyframes fade-in-right {
+          from {
+              opacity: 0;
+              transform: translateX(100%);
+          }
+          to {
+              opacity: 1;
+              transform: translateX(0);
+          }
       }
-
-      .shape:nth-child(1) {
-        width: 40vw;
-        height: 40vw;
-        min-width: 400px;
-        min-height: 400px;
-        background-color: rgba(224, 242, 254, 0.6); /* light blue */
-        top: -20%;
-        left: -20%;
-        animation-delay: 0s;
-        animation-duration: 22s;
+      .animate-fade-in-right {
+          animation: fade-in-right 0.3s ease-out forwards;
       }
-
-      .shape:nth-child(2) {
-        width: 50vw;
-        height: 50vw;
-        min-width: 500px;
-        min-height: 500px;
-        background-color: rgba(220, 252, 231, 0.6); /* light green */
-        bottom: -25%;
-        right: -25%;
-        animation-delay: 5s;
-        animation-duration: 25s;
-      }
-
-      .shape:nth-child(3) {
-        width: 35vw;
-        height: 35vw;
-        min-width: 300px;
-        min-height: 300px;
-        background-color: rgba(243, 232, 255, 0.6); /* light purple */
-        bottom: 5%;
-        left: 10%;
-        animation-delay: 10s;
-        animation-duration: 20s;
-      }
-
-      .shape:nth-child(4) {
-        width: 30vw;
-        height: 30vw;
-        min-width: 250px;
-        min-height: 250px;
-        background-color: rgba(255, 237, 213, 0.6); /* light orange */
-        top: 10%;
-        right: 5%;
-        animation-delay: 15s;
-        animation-duration: 18s;
-      }
-
-      /* Custom scrollbar for webkit browsers */
-      .custom-scrollbar::-webkit-scrollbar {
-        width: 8px;
-      }
-      .custom-scrollbar::-webkit-scrollbar-track {
-        background: transparent;
-      }
-      .custom-scrollbar::-webkit-scrollbar-thumb {
-        background-color: rgba(0, 0, 0, 0.2);
-        border-radius: 10px;
-        border: 2px solid transparent;
-        background-clip: content-box;
-      }
-      .custom-scrollbar::-webkit-scrollbar-thumb:hover {
-        background-color: rgba(0, 0, 0, 0.3);
-      }
-      /* For Firefox */
-      .custom-scrollbar {
-        scrollbar-width: thin;
-        scrollbar-color: rgba(0, 0, 0, 0.2) transparent;
-      }
-
     </style>
-  <script type="importmap">
+<script type="importmap">
 {
   "imports": {
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "vite": "https://aistudiocdn.com/vite@^7.1.12",
-    "jspdf": "https://aistudiocdn.com/jspdf@^3.0.3",
+    "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
+    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.0",
     "html2canvas": "https://aistudiocdn.com/html2canvas@^1.4.1",
-    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.76.1"
+    "jspdf": "https://aistudiocdn.com/jspdf@^3.0.3",
+    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.78.0"
   }
 }
 </script>
 </head>
   <body>
-    <div id="background-animation">
-      <div class="shape"></div>
-      <div class="shape"></div>
-      <div class="shape"></div>
-      <div class="shape"></div>
-    </div>
+    <div id="background-overlay"></div>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
